--- a/etc/atlasd.yml
+++ b/etc/atlasd.yml
@@ -41,16 +41,58 @@ http:
 # Set a custom port to listen for HTTP traffic:
   port: 9900
 
+############################## Monitors ###############################
+
+monitors: ["os", "rabbimq"]
+
+monitor:
+  os:
+    mem_watermark: 80
+
+  rabbimq:
+    host: "192.168.2.5"
+    user: guest
+    pass: guest
+
 ############################## Workers ###############################
 workers:
   task-listen-low:
     command: "php /apps/ds/artisan tinker"
+    priority: 100
+    nodes: "192.168.2.1"
+    restart: disallow
+    procs:
+      allways: 1
+    monitor:
+      rabbimq:
+        exchange: parsley
+        queue: "ds.conveyer.task.low"
+
+  task-listen-middle:
+    command: "php /apps/ds/artisan tinker"
+    priority: 100
+    nodes: any
+    restart: simple
+    max_mem: "100M"
     procs:
       min: 1
       max: 15
+      max_per_node: 1
+    monitor:
+      rabbimq:
+        exchange: parsley
+        queue: "ds.conveyer.task.middle"
 
   task-listen-high:
     command: "php /apps/ds/artisan tinker"
+    priority: 1
+    nodes: ["192.168.2.1", "192.168.2.5"]
+    restart: prestart
+    max_mem: "100M"
     procs:
       min: 1
-      each: 1
+      each_node: 1
+    monitor:
+      rabbimq:
+        exchange: parsley
+        queue: "ds.conveyer.task.high"
