run rebalancing even with high message rate on master

--- a/etc/atlasd.yml
+++ b/etc/atlasd.yml
@@ -54,7 +54,7 @@ monitor:
     user: guest
     pass: guest
 
-    workers:
+    monitors:
       task-listen-low:
         exchange: parsley
         queue: "ds.conveyer.task.low"
