[DS-3760] rabbit api

--- a/rebar.config
+++ b/rebar.config
@@ -7,10 +7,14 @@
 %% Опции компилятора
 {erl_opts, [debug_info, fail_on_warning]}.
 
+{eunit_opts, [verbose]}.
+
 %% Список зависимостей
 %% В директорию gproc будет клонирована ветка master соответствующего git-репозитория.
 {deps,
   [
     {gproc, ".*", {git, "http://github.com/esl/gproc.git", "master"}},
-    {yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git", "master"}}
+    {yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git", "master"}},
+    {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "master"}},
+    {nested, ".*", {git, "git://github.com/odo/nested.git", "master"}}
   ]}.
