--- a/rebar.config
+++ b/rebar.config
@@ -16,5 +16,6 @@
     {gproc, ".*", {git, "http://github.com/esl/gproc.git", "master"}},
     {yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git", "master"}},
     {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "master"}},
-    {nested, ".*", {git, "git://github.com/odo/nested.git", "master"}}
+    {nested, ".*", {git, "git://github.com/odo/nested.git", "master"}},
+    {elli, ".*", {git, "git://github.com/knutin/elli.git", "master"}}
   ]}.
