--- a/rebar.config
+++ b/rebar.config
@@ -17,5 +17,6 @@
     {yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git", "master"}},
     {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "master"}},
     {nested, ".*", {git, "git://github.com/odo/nested.git", "master"}},
-    {elli, ".*", {git, "git://github.com/knutin/elli.git", "master"}}
+    {elli, ".*", {git, "git://github.com/knutin/elli.git", "master"}},
+    {elli_basicauth, ".*", {git, "git://github.com/martinrehfeld/elli_basicauth.git", "master"}}
   ]}.
