create atlasctl escript application

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {deps_dir, ["deps"]}.
 
 %% Поддиректории, в которые rebar должен заглядывать
-{sub_dirs, ["rel", "src"]}.
+{sub_dirs, ["rel", "src/atlasd/", "src/atlasctl/"]}.
 
 %% Опции компилятора
 {erl_opts, [debug_info, fail_on_warning]}.
@@ -20,3 +20,6 @@
     {elli, ".*", {git, "git://github.com/knutin/elli.git", "master"}},
     {elli_basicauth, ".*", {git, "git://github.com/martinrehfeld/elli_basicauth.git", "master"}}
   ]}.
+
+% copy include files to each project
+{pre_hooks,[{compile, "./scripts/share_includes.sh"}]}.
