--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -40,6 +40,7 @@
                   "\{\{erts_vsn\}\}/bin/start_clean.boot"},
            {copy, "files/atlasd", "bin/atlasd"},
            {copy, "files/atlasd.cmd", "bin/atlasd.cmd"},
+           {copy, "files/atlasctl", "bin/atlasctl"},
            {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
            {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
            {copy, "files/sys.config", "releases/\{\{rel_vsn\}\}/sys.config"},
