--- a/etc/atlasd.yml
+++ b/etc/atlasd.yml
@@ -3,7 +3,6 @@
 
 cluster:
   name: atlasd
-  hosts: ["192.168.2.1", "192.168.2.5"]
   cookie: "SecretCookie"
 
 #################################### Node #####################################
@@ -11,6 +10,7 @@ cluster:
 node:
   master: true
   worker: false
+  priority: 100
 
 #################################### Paths ####################################
 
@@ -31,7 +31,7 @@ path:
 
 # internal communication port
 inet:
-  host: 192.168.2.1
+  host: 192.168.1.11
   port: 9100
 
 http:
@@ -46,25 +46,5 @@ http:
 
 ############################## Monitors ###############################
 
-monitors:
-  os:
-    mem_watermark: 80
-
- #rabbitmq:
-  #  mode: api
-  #  host: "192.168.2.5"
-  #  user: guest
-  #  pass: guest
-  #
-  #  monitors:
-  #    task-listen-low:
-  #      exchange: parsley
-  #      queue: "ds.conveyer.task.low"
-  #
-  #    task-listen-middle:
-  #      exchange: parsley
-  #      queue: "ds.conveyer.task.middle"
-  #
-  #    task-listen-high:
-  #      exchange: parsley
-  #      queue: "ds.conveyer.task.high"
+os:
+  mem_watermark: 80
