configure lager as a primary logger

--- a/etc/app2.config
+++ b/etc/app2.config
@@ -3,5 +3,35 @@
     [
       {config, "/apps/atlasd/etc/atlasd2.yml"}
     ]
-  }
+  },
+
+  {sasl, [
+    {errlog_type, error}
+  ]},
+
+  {lager, [
+    {handlers, [
+      {lager_console_backend, info}
+    ]},
+
+    {extra_sinks,
+      [
+        {log_lager_event,
+          [{handlers,
+            [
+              {lager_console_backend, info}
+            ]
+          },
+          {async_threshold, 500},
+          {async_threshold_window, 50}]
+        },
+
+        {error_logger_lager_event,
+          [{handlers, []}]
+        }
+      ]
+    },
+
+    {crash_log, undefined}
+  ]}
 ].
