--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,12 @@
 {sub_dirs, ["rel", "src/atlasd/", "src/atlasctl/"]}.
 
 %% Опции компилятора
-{erl_opts, [debug_info, fail_on_warning]}.
+{erl_opts, [
+  debug_info,
+  fail_on_warning,
+  {parse_transform, lager_transform},
+  {lager_extra_sinks, [log, error_logger]}
+]}.
 
 {eunit_opts, [verbose]}.
 
@@ -18,8 +23,11 @@
     {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "master"}},
     {nested, ".*", {git, "git://github.com/odo/nested.git", "master"}},
     {elli, ".*", {git, "git://github.com/knutin/elli.git", "master"}},
-    {elli_basicauth, ".*", {git, "git://github.com/martinrehfeld/elli_basicauth.git", "master"}}
+    {elli_basicauth, ".*", {git, "git://github.com/martinrehfeld/elli_basicauth.git", "master"}},
+    {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}}
   ]}.
 
 % copy include files to each project
 {pre_hooks,[{compile, "./scripts/share_includes.sh"}]}.
+
+{clean_files,["src/atlasd/ebin/*.beam", "src/atlasctl/ebin/*.beam"]}.
