--- a/etc/atlasd.yml
+++ b/etc/atlasd.yml
@@ -25,7 +25,7 @@ path:
   work: /tmp
 
 # Path to log files:
-  logs: /var/log/atlasd
+  logs: log/
 
 ############################## Network And HTTP ###############################
 
@@ -48,3 +48,15 @@ http:
 
 os:
   mem_watermark: 80
+
+############################## Logging ###############################
+
+log:
+# name of work log file
+  file: "atlasd.log"
+  error: "error.log"
+  crash: "crash.log"
+# log level
+  level: debug
+# show info about starting processes in error log for extra debugging
+  procs: false
