export and import workers config

--- a/etc/atlasd2.yml
+++ b/etc/atlasd2.yml
@@ -8,8 +8,8 @@ cluster:
 #################################### Node #####################################
 
 node:
-  master: true
-  worker: false
+  master: false
+  worker: true
   priority: 1
 
 #################################### Paths ####################################
