--- a/src/atlasctl/rebar.config
+++ b/src/atlasctl/rebar.config
@@ -14,12 +14,13 @@
 {deps,
   [
     {yamerl, ".*", {git, "https://github.com/yakaz/yamerl.git", "master"}},
-    {getopt, ".*", {git, "https://github.com/jcomellas/getopt.git", "master"}}
+    {getopt, ".*", {git, "https://github.com/jcomellas/getopt.git", "master"}},
+    {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "master"}}
   ]}.
 
 %% atlasctl escript
 {escript_name, "atlasctl"}.
-{escript_incl_apps, [getopt, yamerl]}.
+{escript_incl_apps, [getopt, yamerl, jiffy]}.
 {escript_shebang, "#!/usr/bin/env escript\n"}.
 {escript_comment, "%%\n"}.
 %{escript_emu_args, "%%! -pa src/atlasctl/ebin\n"}.
