--- a/rebar.config
+++ b/rebar.config
@@ -24,7 +24,11 @@
     {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "master"}},
     {nested, ".*", {git, "git://github.com/odo/nested.git", "master"}},
     {elli, ".*", {git, "git://github.com/knutin/elli.git", "master"}},
-    {elli_basicauth, ".*", {git, "git://github.com/martinrehfeld/elli_basicauth.git", "master"}}
+    {elli_basicauth, ".*", {git, "git://github.com/martinrehfeld/elli_basicauth.git", "master"}},
+    {lager, ".*", {git, "git://github.com/basho/lager.git", "master"}},
+    {elli_fileserve, ".*", {git, "https://github.com/chrisavl/elli_fileserve.git", "master"}},
+    {elli_stats, ".*", {git, "https://github.com/knutin/elli_stats.git", "master"}},
+    {mustache, ".*", {git, "git://github.com/mojombo/mustache.erl.git", "master"}}
   ]}.
 
 % copy include files to each project
